# libhmmodel

./: README.adoc  configure.ac
src/CXX/: Makefile.am
src/CXX/container/: Makefile.am  graph.hxx
src/CXX/math/: Makefile.am  baum-welch.hxx  categorial_p.hxx  forward.hxx  hmm.hxx  hmm_base.hxx  hmm_discrete.hxx  hmm_gaussian.hxx  hmm_simulation.hxx  normal_p.hxx  numerics.hxx  real.hxx  rng.hxx  viterbi.hxx
src/CXX/unit_test/: Makefile.am
src/CXX/unit_test/container/: Makefile.am  dgraph.cxx  graph.sh
src/CXX/unit_test/math/: Makefile.am  baum-welch.cxx  baum-welch.ghmm.cxx  baum-welch.ghmm.sh  baum-welch.sh  ghmm.cxx  ghmm.sh  hmm.cxx  hmm.sh  normal_p.cxx  normal_p.sh  numerics.cxx  numerics.sh  serialise.cxx
