# Compiler & linker flags
AM_CXXFLAGS = -g -Wall -Werror
AM_LDFLAGS  =

SUBDIRS = \
    container \
    math \
    unit_test


# Internal headers
noinst_HEADERS = \
    config.hxx

lib_LTLIBRARIES = \
    libhmmodel.la

libhmmodel_la_SOURCES =

libhmmodel_la_LIBADD =


# Executables
bin_PROGRAMS =


LDADD = libhmmodel.la
