# Compiler & linker flags
AM_CXXFLAGS = -g -Wall -Werror
AM_LDFLAGS  =

# Unit test scripts
TESTS = \
    hmm.sh \
    baum-welch.sh \
    serialise.sh \
    ghmm.sh


# Unit test programs
check_PROGRAMS = \
    baum-welch \
    hmm \
    serialise \
    ghmm

baum_welch_SOURCES = \
    baum-welch.cxx

hmm_SOURCES = \
    hmm.cxx

serialise_SOURCES = \
    serialise.cxx

ghmm_SOURCES = \
    ghmm.cxx
